# Vulkan-Triangle

./: CMakeLists.txt  README.md  Windows_Build.bat
Headers/: ext.h  glfw_fun.h  std_c.h  vk_fun.h
Shaders/: triangle.vert
Sources/: vk_command.c  vk_device.c  vk_frame.c  vk_image.c  vk_instance.c  vk_physical_device.c  vk_pipeline.c  vk_present.c  vk_queue.c  vk_shader.c  vk_surface.c  vk_synchronization.c  vk_triangle.c
